# multiplication_game_bot

./: README.md  pyproject.toml
src/: .env.example  __main__.py  config_reader.py
src/handlers/: __init__.py  game.py  start.py
src/keyboards/: __init__.py  builders.py  factories.py
